# hearth

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PRD.md  README.md  railway.toml  render.yaml
.github/workflows/: ci.yml
deploy/: docker-compose.yml
deploy/docker/: Dockerfile.test  init-databases.sql
docs/: deployment.md  errors.md  latency-budget.md
go/: Dockerfile  go.mod  go.sum
go/migrations/: embed.go  (+3 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
python/: Dockerfile  conftest.py  pyproject.toml
python/src/: config.py  health.py  run_server.py  server.py
python/src/agents/: base.py  brain_agent.py  closer_agent.py  lawyer_agent.py  orchestrator.py  voice_agent.py
python/src/brain/ingestion/: data_rights.py
python/src/brain/valuation/: engine.py
python/src/brain/visual/: analyzer.py
python/src/hearth_llm/: __init__.py  client.py
python/src/lawyer/audit/: trail.py
python/src/lawyer/claims/: ledger.py
python/src/lawyer/fair_housing/: checker.py
python/src/lawyer/hitl/: trigger.py
python/tests/: test_config_secrets.py  test_hearth_llm.py  test_multi_turn_memory.py
python/tests/agents/: test_brain_agent.py  test_closer_agent.py  test_lawyer_agent.py  test_orchestrator.py  test_voice_agent.py
python/tests/brain/: test_data_rights.py  test_valuation.py  test_visual_analyzer.py
python/tests/lawyer/: test_audit_trail.py  test_claim_ledger.py  test_fair_housing.py  test_hitl.py
ruby/: Dockerfile  Gemfile
web/: Dockerfile  app.py  requirements.txt
(+46 files in other folders)
